--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </div>
         </div>
 
+
         <div id="digiworld">
             <div class="dii">
                 <h2>🚀 Next-Gen Bookmarking</h2>
@@ -206,6 +207,25 @@
             });
         });
 
+
+        document.addEventListener("DOMContentLoaded", function () {
+            fetchPublicWebsites();
+        });
+
+        function fetchPublicWebsites() {
+            var xhr = new XMLHttpRequest();
+            xhr.open("GET", "fetch_public_websites.php", true);
+
+            xhr.onreadystatechange = function () {
+                if (xhr.readyState == 4 && xhr.status == 200) {
+                    document.getElementById("website-list").innerHTML = xhr.responseText;
+                }
+            };
+
+            xhr.send();
+        }
+
+
         document.addEventListener("DOMContentLoaded", function () {
             fetch("fetch_data.php")
                 .then(response => response.json())
@@ -233,6 +253,19 @@
                 })
                 .catch(error => console.error("Error fetching data:", error));
         });
+
+        document.addEventListener("DOMContentLoaded", function () {
+            fetchWebsites();
+        });
+
+        function fetchWebsites() {
+            fetch('fetch_data.php')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('website-list').innerHTML = data;
+                })
+                .catch(error => console.error('Error fetching websites:', error));
+        }
 
 
         $(document).ready(function () {
