--- a/bookmark_extension/popup.html
+++ b/bookmark_extension/popup.html
@@ -11,6 +11,7 @@
     <form id="bookmark-form">
         <input type="text" id="website-name" placeholder="Website Name" required>
         <input type="url" id="website-url" placeholder="Website URL" required>
+        <textarea id="website-description" placeholder="Website Description" required></textarea>
         <input type="text" id="website-category" placeholder="Category (e.g., News, Blog)" required>
         <button type="submit">Add Bookmark</button>
     </form>
