--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="home-container">
         <div class="home1">
             <h1>Discover <span class="clr">AI Tools</span> &
-                Bookmarks<span class="clr"> Collection</span>
+                Websites<span class="clr"> Collection</span>
             </h1>
             <h3>Your curated space for discovering cutting-edge AI tools and organizing web resources in hacker style
             </h3>
